# SuppTicketing

./: .env  Dockerfile  docker-compose-ceph.yml  docker-compose-django.yml  docker-compose-minio.yml  pyproject.toml  test_minio.py
Assessments/: abstract_base_duck.py  complex_concurrency.py  gil_conundrum.py  recursive_evaluation.py
core/: settings.py  urls.py
media/: .10_Advanced_Python_Concepts.pdf.icloud  .Active_Directory_Security_Guide.pdf.icloud  .OOP_Python.pdf.icloud
serv/: admin.py  forms.py  models.py  urls.py  views.py
serv/migrations/: 0001_initial.py  0002_auto_20230811_1041.py  0003_auto_20230822_1645.py  0004_auto_20230822_1716.py  0005_auto_20230822_1724.py  0006_alter_ticket_id.py  0007_auto_20231017_1555.py  0008_auto_20231017_1638.py  0009_auto_20231020_1431.py
serv/static/: style.css  style_2.css
serv/static/assets/images/: .bg-login-left.jpg.icloud
serv/tamplatetags/: custom_filters.py
serv/templates/: base.html  index.html  list_leader.html  list_provider.html  login.html  ticket_by_id.html
static/admin/css/: base.css
templates/admin/: base_site.html
