[tool.poetry]
name = "suppticketing"
version = "0.1.0"
description = ""
authors = ["Michkail <55208634+Michkail@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.5"
psycopg2-binary = "2.9.7"
boto3 = "^1.28.30"
django-storages = "^1.13.2"
django-minio-storage = "^0.5.6"
django-phonenumber-field = "^7.1.0"
phonenumbers = "^8.13.19"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
